# MMF-LVINS

./: CMakeLists.txt  LICENSE  README.md  main.cpp
Spatialcontext/: Spatialcontext.cpp  Spatialcontext.h
